--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://officialmuskan.github.io/portfolio.git",
+  "homepage": "https://officialmuskan.github.io/",
   "name": "portfolio",
   "private": false,
   "version": "0.0.0",
